[gd_scene load_steps=2 format=3 uid="uid://dcou2vpu7ql66"]

[ext_resource type="Script" uid="uid://bf7wrecreqynq" path="res://00_core/debug_window/debug_window.gd" id="1_e5rj1"]

[node name="DebugWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e5rj1")

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 24.0
text = "FPS:"

[node name="MemoryLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 19.0
offset_right = 80.0
offset_bottom = 42.0
text = "Memory: "

[node name="ObjectsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 38.0
offset_right = 65.0
offset_bottom = 61.0
text = "Objects"

[node name="RenderLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 56.0
offset_right = 90.0
offset_bottom = 79.0
text = "Rendered: "
